--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+24.11.2016:
+
+Enhancements:
+
+* MQTT now has multiple processing threads for incoming packets.
+* Added MQTT options to disable topics "plain", "json" or "jsonobj" if unneeded.
+
 13.11.2016:
 
 Enhancements:
