--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+29.03.2017:
+
+Features:
+
+* Added LEVEL and CURRENT_POSITION to EnOcean blinds.
+
+27.03.2017:
+
+Changes:
+
+* Removed Ivona TTS from Sonos settings.
+
 25.03.2017:
 
 Features:
