Changes to docker image creation script

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,16 @@
+03.04.2017:
+
+Enhancement:
+
+* Intertechno: Improved address logging
+* Intertechno: Added old IT 1 channel remote
+
+01.04.2017:
+
+Enhancements:
+
+* Intertechno: Improved address logging
+
 30.03.2017:
 
 Features:
