Corrected small syntax errors

--- a/homegear-miscellaneous/misc/Device Description Files/l10n/de/SimulatedHeatMeter.xml
+++ b/homegear-miscellaneous/misc/Device Description Files/l10n/de/SimulatedHeatMeter.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <homegearDeviceTranslation lang="de">
 	<supportedDevices>
-		<device id="VirtualWaterMeter">
-			<description>Virtueller Wasserzähler</description>
-			<longDescription>Dieses Gerät ist ein für Testzwecke in PHP geschriebener virtueller Wasserzähler. Der Zählerstand wird ungefähr alle 60 Sekunden aktualisiert.</longDescription>
+		<device id="SimulatedHeatMeter">
+			<description>Simulierter Wärmemengenzähler</description>
+			<longDescription>Dieses Gerät ist ein für Testzwecke in PHP geschriebener virtueller Wärmemengenzähler. Der Zählerstand wird ungefähr alle 60 Sekunden aktualisiert.</longDescription>
 		</device>
 	</supportedDevices>
 	<parameterGroups>
@@ -18,9 +18,9 @@
 			</parameter>
 		</variables>
 		<variables id="custom_ch1_values">
-			<parameter id="TOTAL_VOLUME">
+			<parameter id="TOTAL_HEAT_QUANTITY">
 				<label>Zählerstand</label>
-				<description>Der Zählerstand gemessen in Litern (l).</description>
+				<description>Die Wärmemenge gemessen in Megawattstunden (MWh).</description>
 			</parameter>
 		</variables>
 	</parameterGroups>
