--- a/homegear-miscellaneous/misc/Device Description Files/l10n/de/SimulatedGasMeter.xml
+++ b/homegear-miscellaneous/misc/Device Description Files/l10n/de/SimulatedGasMeter.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <homegearDeviceTranslation lang="de">
 	<supportedDevices>
-		<device id="VirtualGasMeter">
-			<description>Virtueller Gaszähler</description>
+		<device id="SimulatedGasMeter">
+			<description>Simulierter Gaszähler</description>
 			<longDescription>Dieses Gerät ist ein für Testzwecke in PHP geschriebener virtueller Gaszähler. Der Zählerstand wird ungefähr alle 60 Sekunden aktualisiert.</longDescription>
 		</device>
 	</supportedDevices>
