--- a/homegear-miscellaneous/misc/Device Description Files/l10n/en/SimulatedWaterMeter.xml
+++ b/homegear-miscellaneous/misc/Device Description Files/l10n/en/SimulatedWaterMeter.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <homegearDeviceTranslation lang="en">
 	<supportedDevices>
-		<device id="VirtualPowerMeter">
-			<description>Virtual power meter</description>
-			<longDescription>This device is a virtual power meter written for testing purposes in PHP. It updates it's meter reading roughly every 60 seconds.</longDescription>
+		<device id="SimulatedWaterMeter">
+			<description>Simulated water meter</description>
+			<longDescription>This device is a virtual water meter written for testing purposes in PHP. It updates it's meter reading roughly every 60 seconds.</longDescription>
 		</device>
 	</supportedDevices>
 	<parameterGroups>
@@ -18,9 +18,9 @@
 			</parameter>
 		</variables>
 		<variables id="custom_ch1_values">
-			<parameter id="TOTAL_ACTIVE_ENERGY">
+			<parameter id="TOTAL_VOLUME">
 				<label>Meter reading</label>
-				<description>The total active energy measured in kWh.</description>
+				<description>The total volume measured in liters (l).</description>
 			</parameter>
 		</variables>
 	</parameterGroups>
